cabal-version:      2.4
name:               bgfx-c-haskell
version:            0.0.0.0
author:             Tristan Hilbert (aka TFlexSoom)
maintainer:         tchilbert@live.com
description:    Please see the README on GitHub at <https://github.com/tflexsoom/Laplace-Engine#readme>
homepage:       https://github.com/tflexsoom/Laplace-Engine#readme
bug-reports:    https://github.com/tflexsoom/Laplace-Engine/issues
copyright:      2022 Tristan Hilbert
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    CHANGELOG.md


library bgfx-c-haskell-lib
  exposed-modules:
      Bgfx
  hs-source-dirs:
      library
  build-depends:
      base ^>=4.16.0.0
  default-language: Haskell2010

executable bgfx-c-haskell-example
    main-is:          Main.hs
    build-depends:    
        bgfx-c-haskell-lib
      , base ^>=4.16.0.0
    hs-source-dirs:   example
    default-language: Haskell2010

-- test-suite bgfx-c-haskell-test
--  type: exitcode-stdio-1.0
--  main-is: Spec.hs
--  hs-source-dirs:
--      test
--  build-depends:
--      HUnit
--    , QuickCheck
--    , base ^>=4.16.0.0
--    , containers
--    , hspec
--  default-language: Haskell2010

